--- a/src/assets/components/Body.css
+++ b/src/assets/components/Body.css
@@ -1,7 +1,8 @@
 .body_content {
     width: 97%;
-    margin-left: 250px;
+    margin-left: 450px;
     padding-left: 20px;
+    margin-bottom: 50px;
     background: #f4f6f9;
     position: relative;
     padding: 75px 36px 4px 22px;
