--- a/src/assets/components/Product/ProductRender.css
+++ b/src/assets/components/Product/ProductRender.css
@@ -4,6 +4,58 @@ table {
     margin: 20px 0;
 }
 
+.headerTable {
+    background-color: #333;
+    color: white;
+    text-align: left;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th,
+td {
+    padding: 8px;
+    vertical-align: middle;
+    border-bottom: 1px solid #ddd;
+    color: black;
+    text-align: center;
+}
+
+tr:hover {
+    background-color: #f5f5f5;
+}
+
+.item {
+    vertical-align: middle;
+
+}
+
+.productImg {
+    max-width: 100px;
+    max-height: 100px;
+}
+
+.btn1,
+.btn2 {
+    padding: 5px 10px;
+    background-color: #007bff;
+    color: white;
+    text-decoration: none;
+    border: none;
+    cursor: pointer;
+}
+
+.btn1:hover {
+    border: #0056b3;
+}
+
+.btn2:hover {
+    border: #0056b3;
+}
+
 .body_content1 {
     width: 97%;
     margin-left: 250px;
