--- a/src/assets/components/EditProduct/EditProduct.css
+++ b/src/assets/components/EditProduct/EditProduct.css
@@ -52,5 +52,13 @@
 .btn {
     margin-top: 15px;
     width: 100px;
-    margin-left: 350px;
+    margin-left: 380px;
+
+    background-color: #CCE5FF;
+
+}
+
+.btn:hover {
+    border: 1px solid black;
+    background-color: white;
 }
